--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "news_reader_application",
   "version": "0.1.0",
-  "private": true,
+  "private": true, 
+  "homepage": "http:/GajulaRohith.github.io/HiHugo",
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.53",
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "words-to-numbers": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
