--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news_reader_application",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "dependencies": {
     "@alan-ai/alan-sdk-web": "^1.8.53",
     "@material-ui/core": "^4.12.4",
@@ -20,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,3 +42,4 @@
     ]
   }
 }
+
