deploy related changes made

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://GajulaRohith.github.io/HiHugo",
   "name": "news_reader_application",
   "version": "0.1.0",
   "private": true,
